--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css\font-awesome-4.7.0\font-awesome-4.7.0\css\font-awesome.min.css">
 
         <!-- JS -->
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v3.9.0/dist/alpine.min.js" defer></script>
@@ -23,11 +24,33 @@
 
     </head>
     <body>
+        <!--
         <nbd-header>
-
         </nbd-header>
         <nbd-footer>
-
         </nbd-footer>
+        -->
+        <footer class="footer">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col align-middle">
+                        <p class="text-center fw-bold">
+                            Nadide Bilge Doğan
+                        </p>
+                    
+                        <p class="text-center">
+                            Computer Engineering Student at Istanbul Technical University
+                        </p>
+                        
+                    </div>
+                </div>
+                <div class="row">
+                    <!--Social Media-->
+                    <section>
+                        <a href="https://github.com/bilgedogan" target="_blank" class="btn"><i class="fa fa-github"></i></a>
+                    </section>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
