background color fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr-TR">
 
 <head>
-    <title>hackyiyenhackyer</title>
+    <title>Nadide Bilge Dogan</title>
     <meta charset="UTF-8">
     <meta name="keywords" content="HTML, CSS, JavaScript, AlpineJS, Bootstrap">
     <meta name="description" content="Personal Website">
@@ -76,6 +76,13 @@
             -->
         </section>
         <section id="projects"></section>
+        <section>
+            <div class="row text-center">
+                <div class="col">,
+                    <h1>Coming soon stay tuned!</h1>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer prime-color py-3">
         <div class="container-fluid">
